client/src/components/NavBar.css
/* Code without media query = Desktop Viewport */
nav {
  background-color: #ff5722;
  /* padding-bottom: 0.75rem; */
  text-align: center;
  margin-bottom: 2%;
  border-bottom: 2px solid #dd2c00;
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

nav li {
  display: inline-block;
  margin: 1.25rem 10rem;
  font-size: 1.35rem;
}

nav a {
  margin: 0;
  color: #ffff;
  text-decoration: none;
}

.home-link {
  font-family: "Ranchers", cursive;
  font-size: 2.25rem;
  -webkit-text-stroke: 1px black;
}

.posts-link {
  font-weight: 600;
  text-decoration: underline;
}

.create-link {
  font-weight: 600;
  text-decoration: underline;
}

nav a:hover {
  color: #00bcd4;
}

.mobile-elements {
  display: none;
}

/* Laptops */
@media only screen and (max-width: 1536) {
}

/* Mobile Phones */
@media only screen and (max-width: 600px) {
  nav li {
    display: none;
  }
  nav {
    padding-bottom: 15%;
  }

  .hamburger-button {
    position: absolute;
    border: none;
    padding: 0;
    left: 5%;
    top: 2%;
  }
  .hamburger-icon {
    display: initial;
    position: absolute;
    left: 5%;
    top: 2%;
  }
  .home-link-mobile {
    font-family: "Ranchers", cursive;
    -webkit-text-stroke: 1px black;
    display: initial;
    position: absolute;
    font-size: 2.25rem;
    top: 0.75%;
    right: 23%;
  }

  .mobile-elements {
    display: initial;
  }

  .mobile-menu {
    z-index: 1;
    width: 40%;
    height: 100%;
    background-color: #00bcd4;
    opacity: 97%;
    position: absolute;
    animation: 0.75s ease-out 0s 1 slide-in-from-left;
    -webkit-animation-name: slide-in-from-left;
    -webkit-animation-duration: 0.75s;
    -webkit-animation-iteration-count: 1;
    -webkit-animation-timing-function: linear;
    -webkit-animation-fill-mode: forwards;
  }

  .mobile-menu ul li {
    display: inline;
  }

  @-webkit-keyframes slide-in-from-left {
    0% {
      -webkit-transform: translateX(-100%);
      transform: translateX(-100%);
      -ms-transform: translateX(-100%);
      -moz-transform: translateX(-100%);
      -o-transform: translateX(-100%);
    }
    100% {
      -webkit-transform: translateX(0);
      transform: translateX(0);
      -ms-transform: translateX(0);
      -moz-transform: translateX(0);
      -o-transform: translateX(0);
    }
  }

  @keyframes slide-in-from-left {
    0% {
      -webkit-transform: translateX(-100%);
      transform: translateX(-100%);
      -ms-transform: translateX(-100%);
      -moz-transform: translateX(-100%);
      -o-transform: translateX(-100%);
    }
    100% {
      -webkit-transform: translateX(0);
      transform: translateX(0);
      -ms-transform: translateX(0);
      -moz-transform: translateX(0);
      -o-transform: translateX(0);
    }
  }

  nav a:hover {
    color: #ffff;
  }

  .menu-test-button {
    position: relative;
    right: 150px;
  }

  .posts-link-mobile {
    position: absolute;
    left: 10px;
    top: 65px;
    font-size: 2.5rem;
  }

  .create-link-mobile {
    position: absolute;
    left: 10px;
    top: 150px;
    font-size: 2.5rem;
  }

  .mobile-menu-exit-button {
    margin-top: 5%;
    margin-left: 65%;
    color: #ffff;
    -webkit-text-stroke: 1px black;
  }
}

